fdlimit: pull in fd limit utilities from go-ethereum
